--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -51,7 +51,7 @@
 					</div>
 				</div>
 				<p class="mt-3 mb-0 text-muted">
-					<span class="text-info mr-2"><i class="fa"></i> 0%</span>
+					<span class="text-warning mr-2"><i class="fa"></i> 0%</span>
 					<span class="text-nowrap">since last hour</span>
 				</p>
 			</div>
