--- a/app/templates/task.html
+++ b/app/templates/task.html
@@ -11,7 +11,7 @@
         </div>
         <div class="col-auto">
             <div>
-                <input class="task-checkbox" id="Task{{ task.id }}" type="checkbox" {% if task.completed %}checked{% endif %}>
+                <input class="task-checkbox {% if task.completed %}text-success{% endif %}" id="Task{{ task.id }}" type="checkbox" {% if task.completed %}checked{% endif %}>
             </div>
         </div>
     </div>
@@ -31,4 +31,5 @@
         </li>
         {% endif %}
     </ol>
+    <span class="badge badge-info">High Priority</span>
 </li>
